--- a/Views/servicesPage.cshtml
+++ b/Views/servicesPage.cshtml
@@ -2,36 +2,12 @@
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage
 
 @{
-	Layout = "mainLayout.cshtml";
+	Layout = "mainLayout";
 	ViewBag.Title = Model?.Value("pageTitle") ?? null;
 
-	var selection = Umbraco.Content(Guid.Parse("67bff7f4-b037-4b56-9106-32b16426ca31"))?.ChildrenOfType("serviceItemTemplate")?.Where(x => x.IsVisible());
-	
 }
 
 
-<section id="services-section" class="services-section">
-	<div class="container">
-		@if (!string.IsNullOrEmpty(Model?.Value("Headline")?.ToString())){
-			<div class="headline">
-				<h2 class="title">@Model.Value("Headline")</h2>
-			</div>
-		}
-		<div class="services">
-		@foreach (var item in selection!) {
-			var image = item?.Value<IPublishedContent>("thumbnailImage")?.Url() ?? "";
-			var preamble = item?.Value<string>("preamble") ?? "";
+@await Html.PartialAsync("partials/serviceList.cshtml")
 
-			<a href="@item?.Url()">
-				<div class="item">
-					<h3>@item?.Name()</h3>
-					<img src="@image" alt="@item?.Name()">
-					<p>@preamble</p>
-				</div>
-			</a>
-		}
-		</div>
-	</div>
-</section>
-
-
+@await Html.PartialAsync("partials/static/NextProject.cshtml")
