--- a/wwwroot/css/scss/main.css
+++ b/wwwroot/css/scss/main.css
@@ -305,7 +305,6 @@ footer .container .copyright-text .credit-text {
   margin: 0 auto;
 }
 .our-services .container .service-content {
-  margin-top: 50px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, auto);
@@ -818,8 +817,10 @@ footer .container .copyright-text .credit-text {
 }
 
 .services-section {
-  padding-top: 100px;
   padding-bottom: 100px;
+}
+.services-section .container {
+  margin-top: 50px;
 }
 .services-section .container .headline {
   text-align: center;
