--- a/wwwroot/css/scss/sections/ServicesPage/ServicesSection/ServicesSection.scss
+++ b/wwwroot/css/scss/sections/ServicesPage/ServicesSection/ServicesSection.scss
@@ -1,8 +1,9 @@
 .services-section {
-    padding-top: 100px;
+
     padding-bottom: 100px;
 
     .container {
+        margin-top: 50px;
 
         .headline {
             text-align: center;
