--- a/Views/Partials/static/Header.cshtml
+++ b/Views/Partials/static/Header.cshtml
@@ -13,6 +13,7 @@
     var aboutPage = root?.Children().FirstOrDefault(x => x.UrlSegment == "about");
     var servicesPage = root?.Children().FirstOrDefault(x => x.UrlSegment == "services");
     var contactPage = root?.Children().FirstOrDefault(x => x.UrlSegment == "contact");
+    var projectPage = root?.Children().FirstOrDefault(x => x.UrlSegment == "projects");
 
 }
 
