--- a/Views/contactPage.cshtml
+++ b/Views/contactPage.cshtml
@@ -8,5 +8,5 @@
 
 
 <sections class="contactNextProject">
-	<partial name="NextProject" />
+	@await Html.PartialAsync("partials/static/NextProject.cshtml")
 </sections>
