--- a/wwwroot/css/scss/main.scss
+++ b/wwwroot/css/scss/main.scss
@@ -21,7 +21,7 @@
 @import 'sections/AboutPage/AboutNextProjectSection/AboutNextProjectSection.scss';
 @import 'sections/ServicesPage/ServicesSection/ServicesSection.scss';
 @import 'sections/ServicesPage/ServiceDetailPage/ServiceDetailPage.scss';
-
+@import 'sections/ProjectPage/ProjectSection/projectSection.scss';
 
 
 body {
