--- a/Views/projectListPage.cshtml
+++ b/Views/projectListPage.cshtml
@@ -1,5 +1,66 @@
 ﻿@using Umbraco.Cms.Web.Common.PublishedModels;
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage
 @{
-	Layout = null;
+	Layout = "mainLayout.cshtml";
+	ViewBag.Title = Model?.Value("pageTitle") ?? null;
+
+	var selection = Umbraco.Content(Guid.Parse("153a36ff-24be-416c-94e8-1be58348f840"))?.ChildrenOfType("projectItemTemplate")?.Where(x => x.IsVisible());
 }
+
+
+
+<section id="project-section" class="project-section">
+	<div class="container">
+		@if (!string.IsNullOrEmpty(Model?.Value("Headline")?.ToString())){
+			<div class="headline">
+				<h2 class="title">@Model.Value("Headline")</h2>
+			</div>
+		}
+		<div class="content-wrapper">
+			<div class="projects">
+				@foreach (var item in selection!) {
+					var image = item?.Value<IPublishedContent>("thumbnailImage")?.Url() ?? "";
+					var preamble = item?.Value<string>("preamble") ?? "";
+					var date = item?.Value<DateTime>("publishDate") ?? DateTime.Now;
+
+					<a href="@item?.Url()" class="project-item">
+						<div class="item">
+							<img src="@image" alt="@item?.Name()" class="item-image">
+							<div class="item-content">
+								<h3>@item?.Name()</h3>
+								<p class="item-date">@date.ToString("MMMM dd, yyyy")</p>
+								<p class="item-preamble">@preamble</p>
+								<span class="read-more">Read more →</span>
+							</div>
+						</div>
+					</a>
+				}
+			</div>
+			<aside class="sidebar">
+				<div class="tags">
+					<h4>Tags</h4>
+					<ul>
+						<li><a href="#">Report</a></li>
+						<li><a href="#">Business plans</a></li>
+						<li><a href="#">Insights</a></li>
+						<li><a href="#">Business</a></li>
+						<li><a href="#">App</a></li>
+						<li><a href="#">Project</a></li>
+						<li><a href="#">Finance</a></li>
+						<li><a href="#">Pricing</a></li>
+					</ul>
+				</div>
+				<div class="help-box">
+					<h4>How can we help you?</h4>
+					<p>Online support 24/7, we are here to help you!</p>
+					<form>
+						<input type="email" placeholder="Email address" />
+						<button type="submit"><i class="fa fa-envelope"></i></button>
+					</form>
+				</div>
+			</aside>
+		</div>
+	</div>
+</section>
+
+
