--- a/wwwroot/css/scss/main.scss
+++ b/wwwroot/css/scss/main.scss
@@ -4,6 +4,7 @@
 @import 'components/buttons/buttons.scss';
 @import 'components/breadcrumb/breadcrumb.scss';
 
+
 @import 'sections/TopBarSection/TopBarSection.scss';
 @import 'sections/HeaderSection/HeaderSection.scss';
 @import 'sections/FooterSection/FooterSection.scss';
@@ -22,6 +23,7 @@
 @import 'sections/ServicesPage/ServicesSection/ServicesSection.scss';
 @import 'sections/ServicesPage/ServiceDetailPage/ServiceDetailPage.scss';
 @import 'sections/ProjectPage/ProjectSection/projectSection.scss';
+@import 'sections/ProjectPage/ProjectDetailPage/ProjectDetailPage.scss';
 
 
 body {
