--- a/Views/projectListPage.cshtml
+++ b/Views/projectListPage.cshtml
@@ -21,16 +21,16 @@
 				@foreach (var item in selection!) {
 					var image = item?.Value<IPublishedContent>("thumbnailImage")?.Url() ?? "";
 					var preamble = item?.Value<string>("preamble") ?? "";
-					var date = item?.Value<DateTime>("publishDate") ?? DateTime.Now;
+					var date = item?.Value<string>("date") ?? "";
 
 					<a href="@item?.Url()" class="project-item">
 						<div class="item">
 							<img src="@image" alt="@item?.Name()" class="item-image">
 							<div class="item-content">
 								<h3>@item?.Name()</h3>
-								<p class="item-date">@date.ToString("MMMM dd, yyyy")</p>
+								<p class="item-date"><i class="fa-solid fa-calendar-days"></i>@date</p>
 								<p class="item-preamble">@preamble</p>
-								<span class="read-more">Read more →</span>
+								<span class="read-more">Read more <i class="fa-solid fa-arrow-right-long arrow"></i></span>
 							</div>
 						</div>
 					</a>
@@ -51,12 +51,11 @@
 					</ul>
 				</div>
 				<div class="help-box">
-					<h4>How can we help you?</h4>
-					<p>Online support 24/7, we are here to help you!</p>
-					<form>
-						<input type="email" placeholder="Email address" />
-						<button type="submit"><i class="fa fa-envelope"></i></button>
-					</form>
+					<h2>How can we help you?</h2>
+                    <p>online support 24/7, we are here to help you</p>
+                    <form action="#" method="post">
+                        <input type="email" placeholder="E-mail address">
+                    </form>
 				</div>
 			</aside>
 		</div>
@@ -64,3 +63,4 @@
 </section>
 
 
+@await Html.PartialAsync("partials/static/NextProject.cshtml")
