--- a/Views/serviceItemTemplate.cshtml
+++ b/Views/serviceItemTemplate.cshtml
@@ -16,15 +16,15 @@
 <section class="service-details">
     <div class="container">
         <div class="content-wrapper">
-            <aside class="left-sidebar">    <!-- Left column: About us and help box -->
-                <div class="about-us">      <!-- About us section -->
+            <aside class="left-sidebar">
+                <div class="about-us">
                     <h2>@asideTitle</h2>
                     <img src="@imageOne" alt="About us image">
                     <p>@asideText</p>
                 </div>
 
                 
-                <div class="help-box">          <!-- Help box section -->
+                <div class="help-box">
                     <h2>How can we help you?</h2>
                     <p>online support 24/7, we are here to help you</p>
                     <form action="#" method="post">
@@ -34,8 +34,8 @@
             </aside>
 
 
-            <main class="main-content">         <!-- Right column: Main content -->
-                @Model?.Value("pageContent")    <!-- Huvudinnehåll från Umbraco -->
+            <main class="main-content">
+                @Model?.Value("pageContent")
             </main>
         </div>
     </div>
