--- a/wwwroot/css/scss/sections/ProjectPage/ProjectSection/projectSection.css
+++ b/wwwroot/css/scss/sections/ProjectPage/ProjectSection/projectSection.css
@@ -1,3 +1,7 @@
+#project-section {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
 #project-section .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -39,13 +43,12 @@
 #project-section .container .projects .project-item .item:hover {
   transform: translateY(-5px);
 }
-#project-section .container .projects .project-item .item .item-image {
-  width: 35%;
-  height: auto;
-}
 #project-section .container .projects .project-item .item .item-content {
   padding: 20px;
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 #project-section .container .projects .project-item .item .item-content h3 {
   font-size: 24px;
@@ -58,8 +61,7 @@
   margin-bottom: 15px;
 }
 #project-section .container .projects .project-item .item .item-content .item-preamble {
-  font-size: 16px;
-  line-height: 1.6;
+  font-size: 14px;
   margin-bottom: 20px;
   color: #333;
 }
