--- a/wwwroot/css/scss/main.scss
+++ b/wwwroot/css/scss/main.scss
@@ -24,6 +24,7 @@
 @import 'sections/ServicesPage/ServiceDetailPage/ServiceDetailPage.scss';
 @import 'sections/ProjectPage/ProjectSection/projectSection.scss';
 @import 'sections/ProjectPage/ProjectDetailPage/ProjectDetailPage.scss';
+@import 'sections/ContactPage/MapSection/MapSection.scss';
 
 
 body {
