--- a/wwwroot/css/scss/main.css
+++ b/wwwroot/css/scss/main.css
@@ -747,6 +747,9 @@ footer .container .copyright-text .credit-text {
   position: relative;
   background-color: #F7F7F7;
 }
+.aboutUsNextProject.special-background {
+  background-color: white;
+}
 .aboutUsNextProject .container {
   position: relative;
   display: flex;
@@ -1361,6 +1364,112 @@ footer .container .copyright-text .credit-text {
 }
 .project-details .container .sidebar .help-box form button i {
   margin-left: 5px;
+}
+
+.map-section {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+}
+.map-section .map-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.map-section .map-overlay img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.map-section #form-container {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 80px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  max-width: 1400px;
+  width: 100%;
+}
+.map-section #form-container .form-content {
+  text-align: center;
+}
+.map-section #form-container .form-content h4 {
+  color: #D9C3A9;
+  font-size: 14px;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+.map-section #form-container .form-content .headline-box {
+  max-width: 500px;
+  text-align: center;
+  margin: 0 auto;
+}
+.map-section #form-container .form-content .headline-box h2 {
+  color: #4F5955;
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+.map-section #form-container .form-content .text-box {
+  max-width: 500px;
+  text-align: center;
+  margin: 0 auto;
+}
+.map-section #form-container .form-content .text-box p {
+  margin-top: 30px;
+  color: #535656;
+  font-size: 14px;
+  font-weight: 400;
+  font-style: italic;
+  margin-bottom: 2rem;
+  line-height: 1.5;
+}
+.map-section #form-container .form-content form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  align-items: center;
+}
+.map-section #form-container .form-content form input, .map-section #form-container .form-content form select {
+  width: 100%;
+  padding: 0.75rem;
+  border: 1px solid #EBEBEB;
+  border-radius: 4px;
+}
+.map-section #form-container .form-content form input::-moz-placeholder {
+  color: #9C9EA6;
+  font-style: italic;
+}
+.map-section #form-container .form-content form input::placeholder {
+  color: #9C9EA6;
+  font-style: italic;
+}
+.map-section #form-container .form-content form button {
+  margin-top: 15px;
+  grid-column: 1/3;
+  justify-self: center;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 15px 40px 15px 40px;
+  background-color: #4F5955;
+  color: #F2EDDC;
+  font-size: 16px;
+  font-weight: 700;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: 0.15s ease-in-out;
+}
+.map-section #form-container .form-content form button:hover {
+  background-color: #F2EDDC;
+  color: #4F5955;
+  transition: 0.15s ease-in-out;
 }
 
 body {
